12 - fix open file